--- a/configs/student_debug.yaml
+++ b/configs/student_debug.yaml
@@ -1,6 +1,6 @@
-# Distilled student Transformer configuration
+# Distilled student Transformer configuration (debug/fast version)
 env_id: FlyCraft-v0
-run_name: student_distilled
+run_name: student_debug
 output_dir: runs
 seed: 7
 n_envs: 8
@@ -16,16 +16,16 @@ policy_kwargs:
 
 ppo_kwargs:
   learning_rate: 1.0e-4
-  n_steps: 1024
-  batch_size: 2048
-  n_epochs: 3
+  n_steps: 256  # reduced for faster updates
+  batch_size: 256  # reduced for faster updates
+  n_epochs: 2  # fewer epochs
   gamma: 0.995
   gae_lambda: 0.95
   clip_range: 0.2
 
-timesteps: 2000000
-save_freq: 20000
-eval_freq: 10000
+timesteps: 5000  # drastically reduced for quick runs
+save_freq: 1000  # save more frequently
+eval_freq: 500   # evaluate more frequently
 
 # Knowledge-distillation settings
 distillation_temperature: 2.0
